Sundays Version 1st thing

--- a/templates/STEP_STANDARD_DELETE_INSERT.j2
+++ b/templates/STEP_STANDARD_DELETE_INSERT.j2
@@ -33,5 +33,15 @@ INSERT INTO DW${INSTANCE}{{step.target_database}}.{{ step.target_table }}
     {%- endfor %}
 )
 {% if step.file_present == True%}{{step.sql_statement}}{% endif %}
-
+;
 .IF ERRORCODE <> 0 THEN .QUIT 101
+
+{% if step.stats != None and step.stats != ''%}
+
+/* Collect statistics for the table */
+COLLECT STATISTICS {{step.stats}} ON DW${INSTANCE}{{step.target_database}}.{{ step.target_table }}
+;
+.IF ERRORCODE <> 0 THEN .QUIT 101
+
+{% endif %}
+/* End of step */
